Fixing bug 310552. Fix window.addEventListener() and other methods that forward to the inner window when called from C++ on a newly created window. r=mrbkap@gmail.com, sr=bzbarsky@mit.edu